Fixed -  8.	Spacing between the video & caption is not correct and there is no padding on left & right

--- a/missingkids/less/css/application.css
+++ b/missingkids/less/css/application.css
@@ -11355,6 +11355,9 @@ hr {
 .three-column .video-image-component .col-md-10 {
   width: 100%;
 }
+.three-column .video-image-component p {
+  padding: 0 16px;
+}
 .gen-info-list {
   margin-bottom: 0;
 }
