--- a/missingkids/less/custom-css.less
+++ b/missingkids/less/custom-css.less
@@ -149,6 +149,9 @@ hr {
         .col-md-10 {
             width: 100%;
         }
+        p {
+            padding: 0 16px;
+        }
     }
 }
 
